--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "13.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.0",
     "react-query": "^3.39.2",
     "rsuite": "^5.23.1",
     "sass": "^1.56.1"
