--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.2.0",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
+    "js-cookie": "^3.0.1",
     "jsonwebtoken": "^9.0.0",
     "next": "13.0.6",
     "react": "18.2.0",
